Add delete color method
