# docs/swagger.yaml
@@ -38,6 +38,8 @@ definitions:
         type: integer
       name:
         type: string
+      price:
+        type: number
       sku:
         type: string
       tags:
@@ -113,6 +115,8 @@ definitions:
         type: string
       name:
         type: string
+      price:
+        type: number
       sku:
         type: string
       tags:
@@ -124,6 +128,7 @@ definitions:
     - colors
     - description
     - name
+    - price
     - sku
     type: object
 host: localhost:8000
@@ -163,6 +168,33 @@ paths:
       summary: Create a new category
       tags:
       - categories-actions
+  /colors/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete color by id
+      parameters:
+      - description: color id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+      summary: Delete colors
+      tags:
+      - colors-actions
   /colors/create:
     post:
       consumes:
